# ori

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  default.nix  rustfmt.toml  shell.nix
crates/ily-core/: Cargo.toml
crates/ily-core/src/: build.rs  children.rs  context.rs  event.rs  layout.rs  lib.rs  node.rs  style.rs  unit.rs  view.rs
crates/ily-core/src/event/: keyboard.rs  mod.rs  pointer.rs  sink.rs
crates/ily-core/src/reactive/: callback.rs  effect.rs  event.rs  scope.rs  signal.rs
crates/ily-core/src/style/: attribute.rs  cache.rs  grammar.pest  loader.rs  mod.rs  parse.rs  selector.rs  style.rs  stylesheet.rs  test.css  transition.rs
crates/ily-core/src/views/: button.rs  checkbox.rs  comment.rs  div.rs  image.rs  knob.rs  mod.rs  scroll.rs  text.rs  text_input.rs
crates/ily-core/src/widgets/: button.rs  div.rs  mod.rs  text.rs
crates/ily-wgpu/: Cargo.toml
crates/ily-wgpu/src/: blit.rs  blit.wgsl  image.rs  lib.rs  mesh.rs  mesh.wgsl  quad.rs  renderer.rs  text.rs
crates/ily-winit/: Cargo.toml
crates/ily-winit/src/: app.rs  convert.rs  lib.rs
crates/ori-app/: Cargo.toml
crates/ori-app/src/: app.rs  builder.rs  command.rs  delegate.rs  lib.rs  request.rs
crates/ori-ash/: Cargo.toml
crates/ori-ash/src/: device.rs  error.rs  instance.rs  lib.rs  quad.rs  renderer.rs  surface.rs  swapchain.rs
crates/ori-ash/src/shader/: quad.frag  quad.frag.spv  quad.vert  quad.vert.spv
crates/ori-baseview/: Cargo.toml
crates/ori-baseview/src/: app.rs  convert.rs  lib.rs  window_handle.rs
crates/ori-core/: Cargo.toml  build.rs
crates/ori-core/src/: any_view.rs  build.rs  children.rs  clipboard.rs  color.rs  command.rs  context.rs  contexts.rs  debug.rs  delegate.rs  element.rs  launcher.rs  layout.rs  lib.rs  log.rs  node.rs  proxy.rs  rebuild.rs  root_element.rs  root_node.rs  shell.rs  transition.rs  ui.rs  unit.rs  view.rs
crates/ori-core/src/canvas/: background.rs  batch.rs  border.rs  canvas.rs  color.rs  curve.rs  mesh.rs  mod.rs  primitive.rs  quad.rs  render.rs  scene.rs  shadow.rs  stroke.rs
crates/ori-core/src/content/: content.rs  mod.rs
crates/ori-core/src/context/: base.rs  build.rs  contexts.rs  draw.rs  event.rs  layout.rs  mod.rs  rebuild.rs
crates/ori-core/src/debug/: history.rs  mod.rs  tree.rs  ui.rs  view.rs
crates/ori-core/src/element/: downcast.rs  into.rs  mod.rs  root.rs  state.rs  view.rs
crates/ori-core/src/event/: animation.rs  cursor.rs  debug.rs  event.rs  ime.rs  keyboard.rs  lifecycle.rs  mod.rs  modifiers.rs  pointer.rs  sink.rs  task.rs  window.rs
crates/ori-core/src/image/: data.rs  image.rs  mod.rs  texture.rs
crates/ori-core/src/layout/: affine.rs  align.rs  alignment.rs  axis.rs  justify.rs  matrix.rs  mod.rs  padding.rs  point.rs  rect.rs  size.rs  space.rs  vector.rs
crates/ori-core/src/pod/: mod.rs  pod.rs  sequence.rs
crates/ori-core/src/reactive/: callback.rs  effect.rs  event.rs  mod.rs  resource.rs  runtime.rs  scope.rs  signal.rs
crates/ori-core/src/style/: attribute.rs  builtin.rs  cache.rs  grammar.pest  key.rs  loader.rs  mod.rs  palette.rs  parse.rs  selector.rs  style.rs  styles.rs  stylesheet.rs  test.css  theme.rs  transition.rs
crates/ori-core/src/text/: atlas.rs  attributes.rs  buffer.rs  fonts.rs  glyph.rs  layout.rs  mod.rs  paragraph.rs  query.rs  source.rs
crates/ori-core/src/theme/: builder.rs  builtin.rs  key.rs  mod.rs  palette.rs  theme.rs
crates/ori-core/src/ui/: mod.rs  request.rs  ui.rs  window.rs
crates/ori-dylib/: Cargo.toml
crates/ori-dylib/src/: lib.rs
crates/ori-font-awesome/: Cargo.toml  build.rs
crates/ori-font-awesome/src/: icon.rs  kind.rs  lib.rs
crates/ori-glow/: Cargo.toml
crates/ori-glow/src/: glutin.rs  lib.rs  mesh.rs  opengl.frag  opengl.vert  render.rs  shader.frag  shader.vert
crates/ori-graphics/: Cargo.toml
crates/ori-graphics/src/: color.rs  curve.rs  frame.rs  image.rs  lib.rs  mesh.rs  quad.rs  rect.rs  render.rs  renderer.rs  text.rs
crates/ori-gtk4/: Cargo.toml
crates/ori-gtk4/examples/: any_view.rs  counter.rs  layer_shell.rs  popover.rs  suspense.rs  text_input.rs
crates/ori-gtk4/src/: app.rs  context.rs  lib.rs  view.rs  window.rs
crates/ori-ike/: Cargo.toml
crates/ori-ike/examples/: ike.rs  svg.rs  todo.rs
crates/ori-ike/src/: app.rs  context.rs  lib.rs  palette.rs  skia.rs  view.rs  vulkan.rs
crates/ori-macro/: Cargo.toml  build.rs
crates/ori-macro/src/: build.rs  entry.rs  example.rs  font.rs  krate.rs  lib.rs  rebuild.rs  reload.rs  stylable.rs  styled.rs  view.rs
crates/ori-reactive/: Cargo.toml
crates/ori-reactive/src/: atom.rs  atom_ref.rs  context.rs  effect.rs  lib.rs  resource.rs  runtime.rs  scope.rs  signal.rs
crates/ori-shell/: Cargo.toml  build.rs
crates/ori-shell/src/: lib.rs
crates/ori-skia/: Cargo.toml
crates/ori-skia/src/: fonts.rs  lib.rs  renderer.rs
crates/ori-style/: Cargo.toml
crates/ori-style/src/: cache.rs  lib.rs  style.rs  styled.rs
crates/ori-wgpu/: Cargo.toml
crates/ori-wgpu/src/: app.rs  backend.rs  blit.rs  convert.rs  error.rs  instance.rs  lib.rs  mesh.rs  proxy.rs  quad.rs  render.rs  renderer.rs  run.rs  text.rs  tracing.rs  window.rs
crates/ori-winit/: Cargo.toml
crates/ori-winit/src/: android.rs  app.rs  backend.rs  clipboard.rs  convert.rs  dummy.rs  error.rs  event.rs  launch.rs  launcher.rs  lib.rs  log.rs  render.rs  run.rs  shell.rs  tracing.rs  util.rs  window.rs
examples/suspense/: Cargo.toml
examples/suspense/src/: main.rs
ori-gtk4/: Cargo.toml
ori-gtk4/examples/: layer_shell.rs
ori-gtk4/src/: app.rs  context.rs  view.rs
ori-gtk4/src/views/: box.rs  button.rs  checkbox.rs  clamp.rs  entry.rs  frame.rs  icon.rs  label.rs  mod.rs  picture.rs  popover.rs  progress.rs  properties.rs  window.rs
ori-ike/: Cargo.toml  build.rs
ori-ike/examples/: counter.rs  many_buttons.rs  todo.rs
ori-ike/src/: app.rs  context.rs  key.rs  lib.rs  palette.rs  reload.rs  skia.rs  vulkan.rs
ori-ike/src/views/: button.rs  container.rs  entry.rs  mod.rs  picture.rs  scroll.rs  stack.rs  text.rs  text_area.rs  window.rs
(+368 files in other folders)
