[package]
name = "ori"
description = "A declarative, data-driven 2D ui framework"
keywords = ["ui", "gui", "2d", "declarative", "data-driven"]
categories = ["ui", "graphics"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[workspace]
members = ["crates/*", "examples/futures", "examples/mobile", "examples/suspense"]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Ori Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ori-app             = { path = "crates/ori-app",            version = "0.1.0-alpha.1" }
ori-core            = { path = "crates/ori-core",           version = "0.1.0-alpha.1" }
ori-dylib           = { path = "crates/ori-dylib",          version = "0.1.0-alpha.1" }
ori-font-awesome    = { path = "crates/ori-font-awesome",   version = "0.1.0-alpha.1" }
ori-glow            = { path = "crates/ori-glow",           version = "0.1.0-alpha.1" }
ori-macro           = { path = "crates/ori-macro",          version = "0.1.0-alpha.1" }
ori-shell           = { path = "crates/ori-shell",          version = "0.1.0-alpha.1" }
ori-skia            = { path = "crates/ori-skia",           version = "0.1.0-alpha.1" }

[dependencies]
# Internal dependencies
ori-app             = { workspace = true }
ori-core            = { workspace = true }
ori-macro           = { workspace = true }

# Optional dependencies
ori-dylib           = { workspace = true, optional = true }
ori-font-awesome    = { workspace = true, optional = true }

# Backend dependencies
ori-shell           = { workspace = true, optional = true }


[dev-dependencies.ori]
path = "."
version = "0.1.0-alpha.1"
features = ["full"]

[features]
default = ["shell", "x11", "wayland"]
font-awesome = ["dep:ori-font-awesome"]
image = ["ori-core/image"]
serde = ["ori-core/serde"]
dylib = ["dep:ori-dylib"]
dylib-always = ["dylib", "ori-dylib/always"]

# All features
full = ["font-awesome", "image", "serde"]

# Backend features
shell = ["dep:ori-shell"]
x11 = ["ori-shell?/x11"]
wayland = ["ori-shell?/wayland"]

