[package]
name = "ori-gtk4"
version = "0.1.0"
edition.workspace = true

[features]
image = ["dep:image"]
adwaita = ["dep:libadwaita"]
layer-shell = ["dep:gtk4-layer-shell"]

[dependencies]
ori.workspace = true

futures-channel = "0.3"
futures-core = "0.3"
gtk4 = "0.10"
gdk4 = "0.10"
notify = "8.2"
thiserror = "2"

[dependencies.futures-util]
version = "0.3"
default-features = false

[dependencies.image]
version = "0.25"
optional = true

[dependencies.libadwaita]
version = "0.8"
optional = true

[dependencies.gtk4-layer-shell]
version = "0.7"
optional = true

[dev-dependencies]
futures-timer = "3"

[dev-dependencies.ori-gtk4]
workspace = true
features = ["layer-shell"]
