[package]
name = "ori-ike"
version = "0.1.0"
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["dep:ash", "dep:ash-window", "dep:raw-window-handle"]
reload = ["dep:libloading", "dep:rand", "dep:json"]

[dependencies]
ori.workspace = true

seahash = "4"

[dependencies.ike]
#git = "https://github.com/ori-ui/ike.git"
path = "../../ike"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.winit]
version = "0.30"
default-features = false
features = [
  "wayland",
  "wayland-dlopen",
  "x11",
  "rwh_06",
]

[dependencies.skia-safe]
version = "0.90"
default-features = false
features = [
  "binary-cache",
  "embed-icudtl",
  "pdf",
  "vulkan",
  "textlayout",
  "svg",
  "webp",
]

[dependencies.ash]
version = "0.38"
optional = true

[dependencies.ash-window]
version = "0.13"
optional = true

[dependencies.raw-window-handle]
version = "0.6"
optional = true

[dependencies.libloading]
version = "0.9"
optional = true

[dependencies.rand]
version = "0.9"
optional = true

[dependencies.json]
version = "0.12"
optional = true

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = ["env-filter"]

