[package]
name = "ily-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ily-graphics = { path = "../ily-graphics", version = "0.1.0" }

glam = "0.23"
pest = "2.5"
pest_derive = "2.5"
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.3", features = ["v4"] }
