[package]
name = "ily-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ily-graphics = { path = "../ily-graphics", version = "0.1.0" }
ily-macro = { path = "../ily-macro", version = "0.1.0" }

deref-derive = "0.1"
glam = "0.23"
pest = "2.5"
pest_derive = "2.5"
smallvec = { version = "1.10", features = ["union", "const_generics", "const_new"] }
smol_str = "0.2"
tracing = { version = "0.1", default-features = false }
uuid = { version = "1.3", features = ["v4"] }
