[package]
name = "ily-winit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ily-core = { path = "../ily-core", version = "0.1.0" }
ily-reactive = { path = "../ily-reactive", version = "0.1.0" }
ily-graphics = { path = "../ily-graphics", version = "0.1.0" }
ily-wgpu = { path = "../ily-wgpu", version = "0.1.0", optional = true }

tracing = "0.1"
tracing-subscriber = "0.3"
winit = "0.28.0"

[features]
default = []
wgpu = ["ily-wgpu"]
