[package]
name = "ori-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ori-core = { workspace = true }

[dependencies.instant]
version = "0.1"
features = ["wasm-bindgen"]
