[package]
name = "ori-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-macro = { workspace = true }

bitflags = "2.4"
crossbeam-channel = "0.5"
miniz_oxide = "0.8"
seahash = "4.1"
smol_str = "0.3.1"
tracing = "0.1"

[dependencies.image]
version = "0.25"
default-features = false
optional = true
features = [
    "gif",
    "jpeg",
    "png",
    "pnm",
    "tga",
    "webp",
    "bmp", 
]

[dependencies.serde]
version = "1.0"
features = ["derive"]
default-features = false
optional = true

[features]
default = []
image = ["dep:image"]
serde = ["dep:serde"]
