[package]
name = "ori-font-awesome"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
json = "0.12"

[dependencies]
ori-core = { path = "../ori-core", version = "0.1.0-alpha.0" }
