[package]
name = "ori-font-awesome"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
json = "0.12"

[dependencies]
ori-core = { path = "../ori-core", version = "0.1.0-alpha.0" }
