[package]
name = "ori-glow"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ori dependencies
ori-core = { workspace = true }

# other dependencies
glow = "0.13"


[dependencies.glutin]
version = "0.31"
default-features = false
features = ["egl", "wgl"]
optional = true

[dependencies.raw-window-handle]
version = "0.5"
optional = true

[features]
default = []
glutin = ["dep:glutin", "dep:raw-window-handle"]
x11 = ["glutin?/x11"]
wayland = ["glutin?/wayland"]
