[package]
name = "ori-graphics"
version = "0.1.0-alpha.1"
edition = "2021"
description = "A graphics library for Ori"
keywords = ["gui", "graphics", "reactive", "native"]
categories = ["gui", "graphics"]
repository = "https://github.com/ChangeCaps/ori"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
tracing = { version = "0.1", default-features = false }

etagere = { version = "0.2", optional = true }
fontdb = { version = "0.14", optional = true }
fontdue = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dependencies.image]
version = "0.24"
default-features = false
optional = true
features = [
	"gif",
	"jpeg",
	"ico",
	"png",
	"tga",
	"tiff",
	"webp",
	"bmp",
	"qoi",
]

[features]
default = ["image", "text"]
image = ["dep:image"]
serde = ["dep:serde"]
text = ["dep:etagere", "dep:fontdb", "dep:fontdue"]
