[package]
name = "ori-gtk4"
version = "0.1.0"
edition.workspace = true

[dev-dependencies.ori-gtk4]
workspace = true
features = ["layer-shell"]

[dependencies]
ori.workspace = true

gtk4 = "0.10"
notify = "8.2"
thiserror = "2"
image = "0.25"

[dependencies.libadwaita]
version = "0.8"
optional = true

[dependencies.tokio]
version = "1"
default-features = false
features = ["sync"]

[dependencies.gtk4-layer-shell]
version = "0.7"
optional = true

[features]
adwaita = ["dep:libadwaita"]
layer-shell = ["dep:gtk4-layer-shell"]
