[package]
name = "ori-ike"
version = "0.1.0"
edition.workspace = true

[dependencies]
ori.workspace = true

glutin = "0.32"
glutin-winit = "0.5"

[dependencies.ike]
path = "../../../ike"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.winit]
version = "0.30"
default-features = false
features = [
  "wayland",
  "wayland-dlopen",
  "x11",
]

[dependencies.skia-safe]
version = "0.90"
features = ["gl", "textlayout"]
