[package]
name = "ori-ike"
version = "0.1.0"
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["dep:ash", "dep:ash-window"]

[dependencies]
ori.workspace = true

raw-window-handle = "0.6"

[dependencies.ash]
version = "0.38"
optional = true

[dependencies.ash-window]
version = "0.13"
optional = true

[dependencies.ike]
git = "https://github.com/ori-ui/ike.git"

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread"]

[dependencies.winit]
version = "0.30"
default-features = false
features = [
  "wayland",
  "wayland-dlopen",
  "x11",
  "rwh_06",
]

[dependencies.skia-safe]
version = "0.90"
default-features = false
features = [
  "binary-cache",
  "embed-icudtl",
  "pdf",
  "vulkan",
  "textlayout",
]
