[package]
name = "ori-macro"
version = "0.1.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
manyhow = "0.5"
proc-macro2 = "1.0"
proc-macro-crate = "1.3"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
