[package]
name = "ori-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
manyhow = "0.10"
proc-macro2 = "1.0"
proc-macro-crate = "2.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
