[package]
name = "ori-macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
manyhow = "0.11"
miniz_oxide = "0.8"
proc-macro2 = "1.0"
proc-macro-crate = "3.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[features]
default = []
reload = [] 
