[package]
name = "ori-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-app.workspace = true
ori-core.workspace = true
ori-glow.workspace = true

tracing     = "0.1"

[dependencies.tracing-subscriber]
version     = "0.3"
features    = ["env-filter"]

[features]
default     = []

x11 = [
    "libloading",
    "x11rb",
    "xkbcommon",
    "xkbcommon/x11"
]

wayland = [
    "libloading",
    "wayland-client",
    "wayland-egl",
    "smithay-client-toolkit",
    "smithay-client-toolkit/xkbcommon"
]

[target.'cfg(target_os = "linux")'.dependencies]
libloading              = { version = "0.8",    optional = true }
xkbcommon               = { version = "0.8",    optional = true }
wayland-client          = { version = "0.31",   optional = true }
wayland-egl             = { version = "0.32",   optional = true }
smithay-client-toolkit  = { version = "0.19",   optional = true, default-features = false }

[target.'cfg(target_os = "linux")'.dependencies.x11rb]
git         = "https://github.com/ChangeCaps/x11rb"
rev         = "070e2bb"
optional    = true
features    = [
    "render", 
    "allow-unsafe-code", 
    "resource_manager",
    "cursor",
    "sync",
    "xkb", 
]
