[package]
name = "ori-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-app.workspace = true
ori-core.workspace = true
ori-glow.workspace = true

tracing     = "0.1"

[dependencies.tracing-subscriber]
version     = "0.3"
features    = ["env-filter"]

[features]
default     = []

x11 = [
    "dep:libloading",
    "dep:x11rb",
    "dep:xkbcommon",
    "xkbcommon/x11",
]

wayland = [
    "dep:libloading",
    "dep:wayland-client",
    "dep:wayland-egl",
    "dep:wayland-csd-frame",
    "dep:wayland-backend",
    "wayland-backend/dlopen",
    "dep:smithay-client-toolkit",
    "dep:smithay-clipboard",
    "dep:sctk-adwaita",
]

[target.'cfg(target_os = "linux")'.dependencies]
libloading              = { version = "0.8",    optional = true }
xkbcommon               = { version = "0.8",    optional = true }
wayland-client          = { version = "0.31",   optional = true }
wayland-egl             = { version = "0.32",   optional = true }
wayland-csd-frame       = { version = "0.3",    optional = true }
wayland-backend         = { version = "0.3",    optional = true }
smithay-client-toolkit  = { version = "0.19",   optional = true }
smithay-clipboard       = { version = "0.7",    optional = true }
sctk-adwaita            = { version = "0.10",   optional = true }

[target.'cfg(target_os = "linux")'.dependencies.x11rb]
git         = "https://github.com/ChangeCaps/x11rb"
rev         = "070e2bb"
optional    = true
features    = [
    "render", 
    "allow-unsafe-code", 
    "resource_manager",
    "cursor",
    "sync",
    "xkb", 
]
