[package]
name = "ori-shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-app.workspace = true
ori-core.workspace = true
ori-glow.workspace = true

tracing     = "0.1"

[dependencies.tracing-subscriber]
version     = "0.3"
features    = ["env-filter"]

[features]
default     = []

x11 = [
    "dep:libloading",
    "dep:x11rb",
    "dep:xkeysym",
    "dep:xkbcommon-dl",
    "xkbcommon-dl/x11",
    "dep:as-raw-xcb-connection",
]

wayland = [
    "dep:libloading",
    "dep:memmap",
    "dep:xkeysym",
    "dep:xkbcommon-dl",
    "dep:wayland-client",
    "dep:wayland-egl",
    "dep:wayland-csd-frame",
    "dep:wayland-backend",
    "wayland-backend/dlopen",
    "dep:smithay-client-toolkit",
    "smithay-client-toolkit/calloop",
    "dep:smithay-clipboard",
    "dep:sctk-adwaita",
]

# Linux
[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
as-raw-xcb-connection   = { version = "1.0",    optional = true                              }
libloading              = { version = "0.8",    optional = true                              }
memmap                  = { version = "0.7",    optional = true                              }
xkeysym                 = { version = "0.2",    optional = true                              }
xkbcommon-dl            = { version = "0.4",    optional = true                              }
wayland-client          = { version = "0.31",   optional = true                              }
wayland-egl             = { version = "0.32",   optional = true                              }
wayland-csd-frame       = { version = "0.3",    optional = true                              }
wayland-backend         = { version = "0.3",    optional = true                              }
smithay-client-toolkit  = { version = "0.19",   optional = true,    default-features = false }
smithay-clipboard       = { version = "0.7",    optional = true                              }
sctk-adwaita            = { version = "0.10",   optional = true                              }

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies.x11rb]
git         = "https://github.com/psychon/x11rb"
rev         = "8d43dd0"
optional    = true
features    = [
    "render", 
    "allow-unsafe-code", 
    "resource_manager",
    "cursor",
    "sync",
    "xkb", 
]

# Android
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { version = "0.6", features = ["native-activity"] }
jni = "0.21"
libloading = "0.8"
ndk = "0.9"
ndk-sys = "0.6"
