[package]
name = "ori-skia"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ori-core.workspace = true

lru = "0.13"
seahash = "4.1"

[dependencies.skia-safe]
version = "0.81"
default-features = false
features = ["binary-cache", "gl", "textlayout"]
