[package]
name = "ori-wgpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ori-core = { path = "../ori-core", version = "0.1.0-alpha.1" }

bytemuck = { version = "1.13", features = ["derive"] }
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }
wgpu = "0.17"
winit = "0.28"

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3" 
features = ["env-filter"]
optional = true

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
