[package]
name = "ori-wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ori dependencies
ori-core = { path = "../ori-core", version = "0.1.0-alpha.1" }

# other dependencies
pollster = "0.3"
raw-window-handle = "0.5"
wgpu = "0.18"
