[package]
name = "ori-winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ori dependencies
ori-core = { path = "../ori-core", version = "0.1.0-alpha.1" }
ori-glow = { path = "../ori-glow", version = "0.1.0-alpha.1", optional = true }

# other dependencies
pollster = "0.3"
raw-window-handle = "0.5"

[dependencies.winit] 
version = "0.29"
default-features = false
features = ["android-native-activity", "rwh_05"]

[dependencies.wgpu]
version = "0.18"
optional = true

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3" 
features = ["env-filter"]
optional = true

[features]
default = []
tracing = ["dep:tracing", "dep:tracing-subscriber"]
x11 = ["winit/x11", "ori-glow?/x11"]
wayland = ["winit/wayland", "ori-glow?/wayland"]

glow = ["dep:ori-glow"]
wgpu = ["dep:wgpu"]
