[package]
name = "ori-winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ori dependencies
ori-core = { workspace = true }
ori-glow = { workspace = true, optional = true }
ori-wgpu = { workspace = true, optional = true }

# other dependencies
clipboard = "0.5"
raw-window-handle = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"

[dependencies.winit] 
version = "0.29"
default-features = false
features = ["android-native-activity", "rwh_05"]

[features]
default = []
x11 = ["winit/x11", "ori-glow?/x11"]
wayland = ["winit/wayland", "ori-glow?/wayland"]

glow = ["dep:ori-glow", "ori-glow/glutin"]
wgpu = ["dep:ori-wgpu"]
