[package]
name = "ori-winit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ori dependencies
ori-app = { workspace = true }
ori-core = { workspace = true }

# other dependencies
clipboard = "0.5"
softbuffer = "0.4"
tiny-skia = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tracing-wasm = "0.2"

[dependencies.winit] 
version = "0.29"
default-features = false
features = ["android-native-activity", "rwh_06"]

[features]
default = []
x11 = ["winit/x11"]
wayland = ["winit/wayland", "winit/wayland-dlopen", "winit/wayland-csd-adwaita"]

